setUp for Testing and change docker for TZ