@@ -40,12 +40,18 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    testImplementation 'org.springframework.boot:spring-boot-data-jpa-test'
+
+
     implementation 'org.springframework.boot:spring-boot-starter-flyway'
     implementation 'org.flywaydb:flyway-mysql'
 
-
+    //TSID
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-70:3.15.2'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-Xshare:off' // JVM 아규먼트 설정
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
